# piggyback

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: branch-protection.yml  ci.yml  pages.yml  publish.yml  workflow.yml
docs/: index.md  mkdocs.yml
docs/api/: endpoints.md  overview.md
docs/development/: architecture.md  branch-protection.md  contributing.md  frontend.md  publishing.md
docs/features/: card-designer.md  card-library.md  checkout.md  delivery.md  reminders.md  stripe-billing.md
docs/getting-started/: configuration.md  docker.md  installation.md  quickstart.md  system-user-details.md
example/: manage.py  settings.py  urls.py
example/accounts/: __init__.py  admin.py  apps.py  models.py
example/accounts/migrations/: 0001_initial.py
landing/: index.html
landing/assets/: style.css
scripts/: docker-entrypoint.sh  protect-main-branch.sh
src/piggyback/: __init__.py  admin.py  apps.py  conf.py  defaults.py  forms.py  signals.py  urls.py
src/piggyback/adapters/: __init__.py  billing.py  user_details.py
src/piggyback/api/: serializers.py  urls.py  views.py
src/piggyback/fixtures/: sample_data.json
src/piggyback/management/commands/: load_sample_data.py  send_reminders.py
src/piggyback/migrations/: 0001_initial.py  0002_recipient_is_system_user.py  0003_billing_and_stripe.py
src/piggyback/models/: __init__.py  base.py  billing.py  cards.py  catalog.py  orders.py  recipients.py  reminders.py
src/piggyback/services/: card_renderer.py  checkout.py  delivery.py  reminders.py
src/piggyback/services/payments/: __init__.py  base.py  demo.py  stripe.py
src/piggyback/templates/piggyback/: base.html  card_view.html  cart.html  catalog.html  checkout.html  editor.html  home.html  library.html  order_confirmation.html  recipients.html  reminders.html  subscriptions.html
src/piggyback/templatetags/: piggyback_tags.py
src/piggyback/views/: htmx.py  stripe_webhook.py  web.py
tests/: conftest.py  test_fixtures.py  test_piggyback.py  test_stripe_billing.py
tests/bdd/: conftest.py  test_steps.py
tests/bdd/features/: auth.feature  catalog.feature  home.feature
(+16 files in other folders)
