[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-piggyback"
version = "0.1.0"
description = "Design, save, and send beautiful occasion cards — a Moonpig-style Django plugin"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Piggyback Contributors" }]
keywords = ["django", "greeting-cards", "occasions", "ecards", "moonpig"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "Django>=4.2,<6",
    "djangorestframework>=3.14,<4",
    "django-filter>=24.0",
    "Pillow>=10.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "pytest-bdd>=7.0",
    "pytest-playwright>=0.5",
    "playwright>=1.40",
    "pre-commit>=3.0",
    "ruff>=0.4",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://kurtisrogers.github.io/piggyback/"
Documentation = "https://kurtisrogers.github.io/piggyback/docs/"
Repository = "https://github.com/kurtisrogers/piggyback"
Issues = "https://github.com/kurtisrogers/piggyback/issues"

[project.entry-points."django.apps"]
piggyback = "piggyback.apps.PiggybackConfig"

[tool.hatch.build.targets.wheel]
packages = ["src/piggyback"]

[tool.hatch.build.targets.sdist]
include = ["src/piggyback", "README.md", "LICENSE"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example.settings"
pythonpath = ["src", "."]
testpaths = ["tests"]
bdd_features_base_dir = "tests/bdd/features"
markers = [
    "e2e: browser-based BDD scenarios (Playwright)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/piggyback/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
